--- a/src/app/game-container/game-container.html
+++ b/src/app/game-container/game-container.html
@@ -6,14 +6,14 @@
         </a>
         <div class="game-list bg-[#f1f5f8] border-b border-[#d6d8d7] px-3 py-1.5 ">
           <div class="row m-x-[-5px] flex flex-wrap ">
-            <div class="para flex flex-col w-[277.333px]">
+            <div class="para flex flex-col w-[277.333px] relative left-2">
               <p class="mb-0 game-name text-[12px]"><strong>Afghanistan U19 v Nepal U19</strong></p>
               <p class="mb-0 datembl text-[12px]">17/12/2025 10:00 AM</p>
             </div>
             <div class="end-text px-[5px] text-right flex basis-auto">
               <div class="game-icon ">
                 <span class="game-iconinplay">
-                  <span class="text-end animate-pulse blink-text">INPLAY</span>
+                  <span class="text-end animate-pulse blink-text relative bottom-2 left-5">INPLAY</span>
                 </span>
               </div>
             </div>
@@ -49,7 +49,7 @@
         </a>
         <div class="game-list bg-[#f1f5f8] border-b border-[#d6d8d7] px-3 py-1.5">
           <div class="row m-x-[-5px] flex flex-wrap">
-            <div class="para flex flex-col w-[277.333px]">
+            <div class="para flex flex-col w-[277.333px] relative left-2">
               <p class="mb-0 game-name text-[12px]"><strong>Bangladesh U19 v Sri Lanka U19</strong></p>
               <p class="mb-0 datembl text-[12px]">17/12/2025 10:00 AM</p>
             </div>
@@ -86,7 +86,7 @@
         </a>
         <div class="game-list bg-[#f1f5f8] border-b border-[#d6d8d7] px-3 py-1.5">
           <div class="row m-x-[-5px] flex flex-wrap">
-            <div class="para flex flex-col w-[277.333px]">
+            <div class="para flex flex-col w-[277.333px] relative left-2">
               <p class="mb-0 game-name text-[12px]"><strong>Australia v England</strong></p>
               <p class="mb-0 datembl text-[12px]">18/12/2025 04:30 AM</p>
             </div>
@@ -123,7 +123,7 @@
         </a>
         <div class="game-list bg-[#f1f5f8] border-b  px-3 py-1.5">
           <div class="row m-x-[-5px] flex flex-wrap">
-            <div class="para flex flex-col w-[277.333px]">
+            <div class="para flex flex-col w-[277.333px] relative left-2">
               <p class="mb-0 game-name text-[12px]"><strong>Kuwait W v Saudi Arabia W</strong></p>
               <p class="mb-0 datembl text-[12px]">17/12/2025 10:30 AM</p>
             </div>
@@ -160,7 +160,7 @@
         </a>
         <div class="game-list bg-[#f1f5f8] border-b  px-3 py-1.5">
           <div class="row m-x-[-5px] flex flex-wrap">
-            <div class="para flex flex-col w-[277.333px]">
+            <div class="para flex flex-col w-[277.333px] relative left-2">
               <p class="mb-0 game-name text-[12px]"><strong>Malaysia W v Myanmar W</strong></p>
               <p class="mb-0 datembl text-[12px]">17/12/2025 11:30 AM</p>
             </div>
@@ -197,7 +197,7 @@
         </a>
         <div class="game-list bg-[#f1f5f8] border-b  px-3 py-1.5">
           <div class="row m-x-[-5px] flex flex-wrap">
-            <div class="para flex flex-col w-[277.333px]">
+            <div class="para flex flex-col w-[277.333px] relative left-2">
               <p class="mb-0 game-name text-[12px]"><strong>Kuwait W v Saudi Arabia W</strong></p>
               <p class="mb-0 datembl text-[12px]">18/12/2025 10:30 AM</p>
             </div>
@@ -234,7 +234,7 @@
         </a>
         <div class="game-list bg-[#f1f5f8] border-b  px-3 py-1.5">
           <div class="row m-x-[-5px] flex flex-wrap">
-            <div class="para flex flex-col w-[277.333px]">
+            <div class="para flex flex-col w-[277.333px] relative left-2">
               <p class="mb-0 game-name text-[12px]"><strong>Malaysia W v Myanmar W</strong></p>
               <p class="mb-0 datembl text-[12px]">18/12/2025 11:30 AM</p>
             </div>
@@ -271,7 +271,7 @@
         </a>
         <div class="game-list bg-[#f1f5f8] border-b  px-3 py-1.5">
           <div class="row m-x-[-5px] flex flex-wrap">
-            <div class="para flex flex-col w-[277.333px]">
+            <div class="para flex flex-col w-[277.333px] relative left-2">
               <p class="mb-0 game-name text-[12px]"><strong>18/12/2025 11:30 AM</strong></p>
               <p class="mb-0 datembl text-[12px]">17/12/2025 10:00 AM</p>
             </div>
@@ -308,7 +308,7 @@
         </a>
         <div class="game-list bg-[#f1f5f8] border-b  px-3 py-1.5">
           <div class="row m-x-[-5px] flex flex-wrap">
-            <div class="para flex flex-col w-[277.333px]">
+            <div class="para flex flex-col w-[277.333px] relative left-2">
               <p class="mb-0 game-name text-[12px]"><strong>Bangladesh U19 v Sri Lanka U19</strong></p>
               <p class="mb-0 datembl text-[12px]">17/12/2025 10:00 AM</p>
             </div>
@@ -345,7 +345,7 @@
         </a>
         <div class="game-list bg-[#f1f5f8] border-b  px-3 py-1.5">
           <div class="row m-x-[-5px] flex flex-wrap">
-            <div class="para flex flex-col w-[277.333px]">
+            <div class="para flex flex-col w-[277.333px] relative left-2">
               <p class="mb-0 game-name text-[12px]"><strong>Bangladesh U19 v Sri Lanka U19</strong></p>
               <p class="mb-0 datembl text-[12px]">17/12/2025 10:00 AM</p>
             </div>
@@ -382,7 +382,7 @@
         </a>
         <div class="game-list bg-[#f1f5f8] border-b  px-3 py-1.5">
           <div class="row m-x-[-5px] flex flex-wrap">
-            <div class="para flex flex-col w-[277.333px]">
+            <div class="para flex flex-col w-[277.333px] relative left-0">
               <p class="mb-0 game-name text-[12px]"><strong>Bangladesh U19 v Sri Lanka U19</strong></p>
               <p class="mb-0 datembl text-[12px]">17/12/2025 10:00 AM</p>
             </div>
@@ -419,7 +419,7 @@
         </a>
         <div class="game-list bg-[#f1f5f8] border-b  px-3 py-1.5">
           <div class="row m-x-[-5px] flex flex-wrap">
-            <div class="para flex flex-col w-[277.333px]">
+            <div class="para flex flex-col w-[277.333px] relative left-2">
               <p class="mb-0 game-name text-[12px]"><strong>Bangladesh U19 v Sri Lanka U19</strong></p>
               <p class="mb-0 datembl text-[12px]">17/12/2025 10:00 AM</p>
             </div>
@@ -456,7 +456,7 @@
         </a>
         <div class="game-list bg-[#f1f5f8] border-b  px-3 py-1.5">
           <div class="row m-x-[-5px] flex flex-wrap">
-            <div class="para flex flex-col w-[277.333px]">
+            <div class="para flex flex-col w-[277.333px] relative left-2">
               <p class="mb-0 game-name text-[12px]"><strong>Bangladesh U19 v Sri Lanka U19</strong></p>
               <p class="mb-0 datembl text-[12px]">17/12/2025 10:00 AM</p>
             </div>
@@ -493,7 +493,7 @@
         </a>
         <div class="game-list bg-[#f1f5f8] border-b  px-3 py-1.5">
           <div class="row m-x-[-5px] flex flex-wrap">
-            <div class="para flex flex-col w-[277.333px]">
+            <div class="para flex flex-col w-[277.333px] relative left-2">
               <p class="mb-0 game-name text-[12px]"><strong>Bangladesh U19 v Sri Lanka U19</strong></p>
               <p class="mb-0 datembl text-[12px]">17/12/2025 10:00 AM</p>
             </div>
@@ -530,7 +530,7 @@
         </a>
         <div class="game-list bg-[#f1f5f8] border-b  px-3 py-1.5">
           <div class="row m-x-[-5px] flex flex-wrap">
-            <div class="para flex flex-col w-[277.333px]">
+            <div class="para flex flex-col w-[277.333px] relative left-2">
               <p class="mb-0 game-name text-[12px]"><strong>Bangladesh U19 v Sri Lanka U19</strong></p>
               <p class="mb-0 datembl text-[12px]">17/12/2025 10:00 AM</p>
             </div>
