--- a/src/app/right-content/right-content.html
+++ b/src/app/right-content/right-content.html
@@ -56,7 +56,7 @@
                   </div>
                   <div class="game-icons float-right">
                     <span class="game-icon w-[25px]  mt-0.5 inline-block">
-                      <img src="circle-solid-full.svg" alt="" class="h-3 w-3">
+                      <img src="circle-solid-full.svg" alt="" class="h-[14.7px] w-3.5">
                       <span class="active"></span>
                     </span>
                   </div>
@@ -111,7 +111,7 @@
                   </div>
                   <div class="game-icons float-right">
                     <span class="game-icon w-[25px] text-right mt-0.5 inline-block">
-                      <img src="circle-solid-full.svg" alt="" class="h-3 w-3 filter invert-[0.2] sepia saturate-[6000%] hue-rotate-[85deg]">
+                      <img src="circle-solid-full.svg" alt="" class="h-[14.7px] w-3.5">
                       <span class="active"></span>
                     </span>
                   </div>
@@ -166,7 +166,7 @@
                   </div>
                   <div class="game-icons float-right">
                     <span class="game-icon w-[25px] text-right mt-0.5 inline-block">
-                      <img src="circle-solid-full.svg" alt="" class="h-3 w-3 text-right">
+                      <img src="circle-solid-full.svg" alt="" class="h-[14.7px] w-3.5">
                       <span class="active"></span>
                     </span>
                   </div>
@@ -221,7 +221,7 @@
                   </div>
                   <div class="game-icons float-right">
                     <span class="game-icon w-[25px] text-right mt-0.5 inline-block">
-                      <img src="circle-solid-full.svg" alt="" class="h-3 w-3 text-right">
+                      <img src="clock-solid-full (2).svg" alt="" class="h-[14.7px] w-3.5 text-right">
                       <span class="active"></span>
                     </span>
                   </div>
@@ -276,7 +276,7 @@
                   </div>
                   <div class="game-icons float-right">
                     <span class="game-icon w-[25px] text-right mt-0.5 inline-block">
-                      <img src="circle-solid-full.svg" alt="" class="h-3 w-3 text-right">
+                      <img src="clock-solid-full (2).svg" alt="" class="h-[14.7px] w-3.5 text-right">
                       <span class="active"></span>
                     </span>
                   </div>
@@ -331,7 +331,7 @@
                   </div>
                   <div class="game-icons float-right">
                     <span class="game-icon w-[25px] text-right mt-0.5 inline-block">
-                      <img src="circle-solid-full.svg" alt="" class="h-3 w-3 text-right">
+                      <img src="clock-solid-full (2).svg" alt="" class="h-[14.7px] w-3.5 text-right">
                       <span class="active"></span>
                     </span>
                   </div>
@@ -386,7 +386,7 @@
                   </div>
                   <div class="game-icons float-right">
                     <span class="game-icon w-[25px] text-right mt-0.5 inline-block">
-                      <img src="circle-solid-full.svg" alt="" class="h-3 w-3 text-right">
+                      <img src="clock-solid-full (2).svg" alt="" class="h-[14.7px] w-3.5 text-right">
                       <span class="active"></span>
                     </span>
                   </div>
@@ -408,13 +408,13 @@
                 <td>
                   <button
                     class="back relative bg-[#72bbef] h-[25px] w-full min-w-10 text-center text-[14px] inline-block">
-                    <span class="odd">12.5</span>
+                    <span class="odd">11.2</span>
                   </button>
                 </td>
                 <td>
                   <button
                     class="back relative bg-[#faa9ba] h-[25px] w-full min-w-10 text-center text-[14px] inline-block">
-                    <span class="odd">13</span>
+                    <span class="odd">19</span>
                   </button>
                 </td>
                 <!-- 3rd -->
@@ -441,7 +441,7 @@
                   </div>
                   <div class="game-icons float-right">
                     <span class="game-icon w-[25px] text-right mt-0.5 inline-block">
-                      <img src="circle-solid-full.svg" alt="" class="h-3 w-3 text-right">
+                      <img src="clock-solid-full (2).svg" alt="" class="h-[14.7px] w-3.5 text-right">
                       <span class="active"></span>
                     </span>
                   </div>
@@ -496,7 +496,7 @@
                   </div>
                   <div class="game-icons float-right">
                     <span class="game-icon w-[25px] text-right mt-0.5 inline-block">
-                      <img src="circle-solid-full.svg" alt="" class="h-3 w-3 text-right">
+                      <img src="clock-solid-full (2).svg" alt="" class="h-[14.7px] w-3.5 text-right">
                       <span class="active"></span>
                     </span>
                   </div>
@@ -551,7 +551,7 @@
                   </div>
                   <div class="game-icons float-right">
                     <span class="game-icon w-[25px] text-right mt-0.5 inline-block">
-                      <img src="circle-solid-full.svg" alt="" class="h-3 w-3 text-right">
+                      <img src="clock-solid-full (2).svg" alt="" class="h-[14.7px] w-3.5 text-right">
                       <span class="active"></span>
                     </span>
                   </div>
@@ -606,7 +606,7 @@
                   </div>
                   <div class="game-icons float-right">
                     <span class="game-icon w-[25px] text-right mt-0.5 inline-block">
-                      <img src="circle-solid-full.svg" alt="" class="h-3 w-3 text-right">
+                      <img src="clock-solid-full (2).svg" alt="" class="h-[14.7px] w-3.5 text-right">
                       <span class="active"></span>
                     </span>
                   </div>
@@ -661,7 +661,7 @@
                   </div>
                   <div class="game-icons float-right">
                     <span class="game-icon w-[25px] text-right mt-0.5 inline-block">
-                      <img src="circle-solid-full.svg" alt="" class="h-3 w-3 text-right">
+                      <img src="clock-solid-full (2).svg" alt="" class="h-[14.7px] w-3.5 text-right">
                       <span class="active"></span>
                     </span>
                   </div>
@@ -716,7 +716,7 @@
                   </div>
                   <div class="game-icons float-right">
                     <span class="game-icon w-[25px] text-right mt-0.5 inline-block">
-                      <img src="circle-solid-full.svg" alt="" class="h-3 w-3 text-right">
+                      <img src="clock-solid-full (2).svg" alt="" class="h-[14.7px] w-3.5 text-right">
                       <span class="active"></span>
                     </span>
                   </div>
@@ -771,7 +771,7 @@
                   </div>
                   <div class="game-icons float-right">
                     <span class="game-icon w-[25px] text-right mt-0.5 inline-block">
-                      <img src="circle-solid-full.svg" alt="" class="h-3 w-3 text-right">
+                      <img src="clock-solid-full (2).svg" alt="" class="h-[14.7px] w-3.5 text-right">
                       <span class="active"></span>
                     </span>
                   </div>
@@ -826,7 +826,7 @@
                   </div>
                   <div class="game-icons float-right">
                     <span class="game-icon w-[25px] text-right mt-0.5 inline-block">
-                      <img src="circle-solid-full.svg" alt="" class="h-3 w-3 text-right">
+                      <img src="clock-solid-full (2).svg" alt="" class="h-[14.7px] w-3.5 text-right">
                       <span class="active"></span>
                     </span>
                   </div>
@@ -881,7 +881,7 @@
                   </div>
                   <div class="game-icons float-right">
                     <span class="game-icon w-[25px] text-right mt-0.5 inline-block">
-                      <img src="circle-solid-full.svg" alt="" class="h-3 w-3 text-right">
+                      <img src="clock-solid-full (2).svg" alt="" class="h-[14.7px] w-3.5 text-right">
                       <span class="active"></span>
                     </span>
                   </div>
@@ -936,7 +936,7 @@
                   </div>
                   <div class="game-icons float-right">
                     <span class="game-icon w-[25px] text-right mt-0.5 inline-block">
-                      <img src="circle-solid-full.svg" alt="" class="h-3 w-3 text-right">
+                      <img src="clock-solid-full (2).svg" alt="" class="h-[14.7px] w-3.5 text-right">
                       <span class="active"></span>
                     </span>
                   </div>
@@ -991,7 +991,7 @@
                   </div>
                   <div class="game-icons float-right">
                     <span class="game-icon w-[25px] text-right mt-0.5 inline-block">
-                      <img src="circle-solid-full.svg" alt="" class="h-3 w-3 text-right">
+                      <img src="clock-solid-full (2).svg" alt="" class="h-[14.7px] w-3.5 text-right">
                       <span class="active"></span>
                     </span>
                   </div>
@@ -1046,7 +1046,7 @@
                   </div>
                   <div class="game-icons float-right">
                     <span class="game-icon w-[25px] text-right mt-0.5 inline-block">
-                      <img src="circle-solid-full.svg" alt="" class="h-3 w-3 text-right">
+                      <img src="clock-solid-full (2).svg" alt="" class="h-[14.7px] w-3.5 text-right">
                       <span class="active"></span>
                     </span>
                   </div>
@@ -1101,7 +1101,7 @@
                   </div>
                   <div class="game-icons float-right">
                     <span class="game-icon w-[25px] text-right mt-0.5 inline-block">
-                      <img src="circle-solid-full.svg" alt="" class="h-3 w-3 text-right">
+                      <img src="clock-solid-full (2).svg" alt="" class="h-[14.7px] w-3.5 text-right">
                       <span class="active"></span>
                     </span>
                   </div>
@@ -1156,7 +1156,7 @@
                   </div>
                   <div class="game-icons float-right">
                     <span class="game-icon w-[25px] text-right mt-0.5 inline-block">
-                      <img src="circle-solid-full.svg" alt="" class="h-3 w-3 text-right">
+                      <img src="clock-solid-full (2).svg" alt="" class="h-[14.7px] w-3.5 text-right">
                       <span class="active"></span>
                     </span>
                   </div>
@@ -1211,7 +1211,7 @@
                   </div>
                   <div class="game-icons float-right">
                     <span class="game-icon w-[25px] text-right mt-0.5 inline-block">
-                      <img src="circle-solid-full.svg" alt="" class="h-3 w-3 text-right">
+                      <img src="clock-solid-full (2).svg" alt="" class="h-[14.7px] w-3.5 text-right">
                       <span class="active"></span>
                     </span>
                   </div>
@@ -1266,7 +1266,7 @@
                   </div>
                   <div class="game-icons float-right">
                     <span class="game-icon w-[25px] text-right mt-0.5 inline-block">
-                      <img src="circle-solid-full.svg" alt="" class="h-3 w-3 text-right">
+                      <img src="clock-solid-full (2).svg" alt="" class="h-[14.7px] w-3.5 text-right">
                       <span class="active"></span>
                     </span>
                   </div>
@@ -1321,7 +1321,7 @@
                   </div>
                   <div class="game-icons float-right">
                     <span class="game-icon w-[25px] text-right mt-0.5 inline-block">
-                      <img src="circle-solid-full.svg" alt="" class="h-3 w-3 text-right">
+                      <img src="clock-solid-full (2).svg" alt="" class="h-[14.7px] w-3.5 text-right">
                       <span class="active"></span>
                     </span>
                   </div>
@@ -1376,7 +1376,7 @@
                   </div>
                   <div class="game-icons float-right">
                     <span class="game-icon w-[25px] text-right mt-0.5 inline-block">
-                      <img src="circle-solid-full.svg" alt="" class="h-3 w-3 text-right">
+                      <img src="clock-solid-full (2).svg" alt="" class="h-[14.7px] w-3.5 text-right">
                       <span class="active"></span>
                     </span>
                   </div>
