--- a/src/app/right-content/right-content.css
+++ b/src/app/right-content/right-content.css
@@ -1,4 +1,7 @@
-
+.active{
+  color:#28a745;
+  border-radius: 50%;
+}
 @layer utilities {
   .bg-active-gradient {
     background: linear-gradient(-180deg, #f4b501 0%, #f68700 100%);
