--- a/src/app/navbar/navbar.html
+++ b/src/app/navbar/navbar.html
@@ -84,7 +84,7 @@
     <li
       class="nav-item w-[118.6px] h-[19.33] grow flex shrink text-center pt-[11px] pb-[11px] mb-auto  text-[12px] text-white pl-1"  (click)="setIndex(3)" 
       [ngClass]="{'border-t-2  border-white ': activeIndex === 3 }">
-      <a class="nav-link relative ">
+      <a class="nav-link relative left-3.5">
         <div class=" w-[93.94px] "> TIPS &amp; PREVIEWS </div>
       </a>
     </li>
