--- a/src/app/header/header.html
+++ b/src/app/header/header.html
@@ -14,7 +14,7 @@
           <div class="br-2 w-[25%] invisible"></div>
           <div class="row-2 flex items-center justify-end text-right leading-[23px] font-[14px] w-[25%]">
             <div class="row flex flex-wrap ml-[-9px] mr-[-9px] mt-0 w-[110%] h-9 ">
-              <div class="empty p-[3px] flex items-center justify-end leading-[23px] h-9 w-full gap-5 relative lg:bottom-1.5">
+              <div class="empty p-[3px] flex items-center justify-end leading-[23px] h-9 w-full gap-5 relative lg:bottom-1.5 right-12">
                 <ul class="desktopviewbutton flex items-center mt-2.5 mr-[17px] gap-5 mb-1.5">
                   <div class="search float-left flex justify-center space-x-5 ">
                     <input id="searchEvent" name="searchEvent" placeholder="All Events" type="text" autocomplete="off"
@@ -35,7 +35,7 @@
                 <div class="btn w-[89px]">
 
                   <button (click)="openLogin()" class="px-6 bg-[linear-gradient(-180deg,#f4b501_0%,#f68700_100%)] border-black
-                 rounded-[3.875px] max-w-[230px] h-[30px] font-[14px] text-[rgb(0,0,0)] text-sm ">LOGIN</button>
+                 rounded-[3.875px] max-w-[230px] h-[30px] font-[14px] text-[rgb(0,0,0)] text-sm lg:w-[108px]">LOGIN</button>
                 </div>
                 <div *ngIf="showLoginForm" class="fixed inset-0 bg-black/60 flex items-center justify-center z-50">
                   <div class="bg-white w-full max-w-[300px] p-4 rounded-lg shadow-lg">
