--- a/src/app/right-content/right-content.html
+++ b/src/app/right-content/right-content.html
@@ -1,4 +1,4 @@
-<div class="container w-auto pr-[9px] pl-[9px] mr-0 ml-0 relative z-20 top-30">
+<div class="container w-auto pr-[9px] pl-[9px] mr-0 ml-0 relative z-20  [@media(min-width:992px)]:top-30">
   <div class="w-[1056.96px]">
     <ul
       class="navSportsDesktop w-[1056.96px] flex h-8 bg-[linear-gradient(180deg,#030a12,#444647_42%,#58595a)] mt-0.5 ml-0.5">
@@ -24,14 +24,14 @@
   </div>
 </div>
 <!--game block -->
-<div class="game mb-25 block h-[593.667px] w-[1056.96px] relative top-30 pl-[3px]">
+<div class="game mb-25 block h-[593.667px] w-[1056.96px] relative  pl-[3px]  [@media(min-width:992px)]:top-30 ">
   <div class="app-market">
     <div class="container pr-[9px] pl-[9px] mr-0 ml-0  h-[677px] w-[1074.96px]">
       <div>
-        <div class="card-content">
+        <div class="card-content" >
           <table>
             <thead>
-              <tr>
+              <tr class="[@media(max-width:992px)]:w-full">
                 <th
                   class="pt-1 pb-[5px] pr-[15px] pl-[15px] w-[654.542px] h-7 text-start text-[12px]  py-1.5 text-[#303030] border-b-2 border-[#dee2e6]">
                   Game</th>
@@ -56,7 +56,7 @@
                   </div>
                   <div class="game-icons float-right">
                     <span class="game-icon w-[25px]  mt-0.5 inline-block">
-                      <img src="circle-solid-full.svg" alt="" class="h-[14.7px] w-3.5">
+                      <img src="circle-solid-full.svg" alt="" class="h-[14.5px] w-3.5">
                       <span class="active"></span>
                     </span>
                   </div>
@@ -1431,7 +1431,7 @@
 <!-- popular nav -->
 <div>
   <div class="app-casino">
-    <div class="container-fluid mx-0 pr-[9px] pl-4 w-[1066.96px] mt-30 relative top-28">
+    <div class="container-fluid mx-0 pr-[9px] pl-4  mt-30 relative w-[1066.96px] top-30 ">
       <div class="md2 relative">
         <ul
           class="navSports mb-3 h-8 overflow-x-auto bg-[linear-gradient(180deg,#030a12,#444647_42%,#58595a)] shadow-[0_8px_8px_-7px_#000] hidden sm:flex">
