--- a/src/app/sidebar/sidebar.html
+++ b/src/app/sidebar/sidebar.html
@@ -1,5 +1,5 @@
 <!-- sidebar -->
-<div class="h-full hidden w-[15%] sm:flex md:flex fixed">
+<div class="h-full hidden  fixed [@media(min-width:992px)]:flex w-[15%]">
   <div
     class="sidebar w-full bg-[linear-gradient(-180deg,#b8b3b3_0%,#dad6d6_100%)]  h-[calc(100dvh - 139px)] grow shrink basis-full h-full relative top-30">
     <div class="app-sidebar">
